# ni-file

./: .gitignore  Cargo.toml  README.md  SECTIONS.md  TECHNICAL.md  TESTINSTRUMENTBEST.deflate  booga1.deflate  booga2.deflate  checktest  compress-test  deflate  deflate2  deps.txt  dsin.txt  filterbass  kontakt4  nki.ksy  output  patch.nki
_archived/: kinds.rs
cli/: Cargo.toml
doc/: Applications.md  BINALYSIS.md  FORMATS.md  FUNCTIONS.md  Item.md  MAGIC.md  README.md  SCHEMA.md  TAGS.md  TERMINOLOGY.md  id.md
dsin-data/: 4KIN-4-222.dsin  DSIN-100-14.dsin  DSIN-100-16.dsin  DSIN-100-20.dsin  DSIN-100-24.dsin  DSIN-100-30.dsin  DSIN-101-31.dsin  DSIN-101-33.dsin  DSIN-101-35.dsin  DSIN-101-37.dsin  DSIN-101-39.dsin  DSIN-104-1997.dsin  DSIN-106-38.dsin  DSIN-108-110.dsin  DSIN-108-120.dsin  DSIN-108-328.dsin  DSIN-108-364.dsin  DSIN-108-386.dsin  DSIN-108-388.dsin  DSIN-108-394.dsin  DSIN-108-434.dsin  DSIN-108-438.dsin  DSIN-108-444.dsin  DSIN-108-468.dsin  DSIN-108-472.dsin  DSIN-108-476.dsin  DSIN-108-478.dsin  DSIN-108-480.dsin  DSIN-108-482.dsin  DSIN-108-484.dsin  DSIN-108-486.dsin  DSIN-108-488.dsin  DSIN-108-490.dsin  DSIN-108-492.dsin  DSIN-108-494.dsin  DSIN-108-496.dsin  DSIN-108-498.dsin  DSIN-108-500.dsin  DSIN-108-502.dsin  DSIN-108-504.dsin  (+131 more)
examples/: Cinematic Sound Effects copy.nki  TESTINSTRUMENTBEST.deflate  booga.nki  compressed-portion-only  container.rs  decompress.rs  detect-filetype.rs  detect.rs  extract-preset.rs  filterbass.nki  item-tree.rs  (+18 more)
examples-old/: OGGR2.nki  TESTINSTRUMENTBEST.compressed  gummotown.nki  monolith-buzzsaw.nki
(+643 files in other folders)
