[package]
name = "ni-file"
version = "0.0.1"
authors = ["monomadic"]
edition = "2018"

[dependencies]
nom = "7.1.3"
log = "0.4.17"
env_logger = "0.10.0"
byteorder = "1.4.3"
binread = "2.2.0"
thiserror = "1.0.40"
anyhow = "1.0.70"
glob = "0.3.1"
fastlz = "0.1.0"
wax = "0.5.0"
time = "0.3.22"

[dev-dependencies]
color-eyre = "0.6.2"
tui-tree-widget = "0.12.0"
