[package]
name = "ni-file"
version = "0.0.1"
authors = ["monomadic"]
edition = "2021"

[dependencies]
log = "0.4.19"
thiserror = "1.0.44"
glob = "0.3.1"
time = "0.3.25"
fastlz = "0.1.0"
flate2 = "1.0.26"
tracing = "0.1.37"
hound = "3.5.0"

[dev-dependencies]
wax = "0.5.0"
color-eyre = "0.6.2"
tui-tree-widget = "0.12.0"
