[package]
name = "ni-file"
version = "0.0.1"
authors = ["monomadic"]
edition = "2021"

[dependencies]
thiserror = "1.0.44"
time = "0.3.25"
ncw = "0.1.2"
lz77 = "0.1.0"
binread = "2.2.0"
# TODO: to remove:
flate2 = "1.0.27"
glob = "0.3.1"
fastlz = "0.1"
color-eyre = "0.6.2"

[dev-dependencies]
tui-tree-widget = "0.13.0"
